Bug 92455 - inconsistent unit handling
Summary: inconsistent unit handling
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: Other All
: medium normal
Assignee: Ben
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-06-30 12:46 UTC by Markus Mohrhard
Modified: 2015-08-05 18:52 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Markus Mohrhard 2015-06-30 12:46:10 UTC
The unit handling when it comes to the "Data->Convert Units" dialog is inconsistent.

converting a cell with 3m to mm results in 3000.
converting a cell with a header row:
length [m]
3
and then converting the cell with the 3 to mm results in 3000mm

We should fix the first case to create 3000mm in the cell.


Code should be in UnitsImpl::convertCellUnitsForColumnRange
Comment 1 Markus Mohrhard 2015-06-30 12:48:17 UTC
@Ben: that would be one for you and might be a simple one for the beginning.