tdf#92455 - inconsistent unit handling

Change-Id: Ifbb85a32ef9d84199d17cedd28fa0f9e66eabf66